<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>tdt4100-v2021</groupId>
    <artifactId>project</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>15.0.1</version>
        </dependency>

        <!-- JUnit Platform Launcher -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.7.1</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit Jupiter Engine -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.1</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit Vintage Engine -->
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.7.1</version>
            <scope>test</scope>
        </dependency>

        <!-- TestFX -->
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
        </dependency>



    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>15</release>
                    <!--<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <options>
                        <option>--enable-preview</option>
                    </options>
                    <mainClass>project/financemanager.App</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Package as jar -->
    <!--   		<plugin> -->
    <!--   			<groupId>org.apache.maven.plugins</groupId> -->
    <!--   						<mainClass>project.App</mainClass> -->
    <!--   						<addClasspath>true</addClasspath> -->
    <!--   					<manifest> -->
    <!--   				<archive> -->
    <!--   			<configuration> -->
    <!--   			<artifactId>maven-jar-plugin</artifactId> -->
    <!--   					</manifest> -->
    <!--   				</archive> -->
    <!--   			</configuration> -->
    <!--   		</plugin> -->
    <!--   		<plugin> -->
    <!--   			<artifactId>maven-assembly-plugin</artifactId> -->
    <!--   			<configuration> -->
    <!--   				<archive> -->
    <!--   					<manifest> -->
    <!--   						<addClasspath>true</addClasspath> -->
    <!--   						<mainClass>project.App</mainClass> -->
    <!--   					</manifest> -->
    <!--   				</archive> -->
    <!--   				<descriptorRefs> -->
    <!--   					<descriptorRef>jar-with-dependencies</descriptorRef> -->
    <!--   				</descriptorRefs> -->
    <!--   			</configuration> -->
    <!--   			<executions> -->
    <!--   				<execution> -->
    <!--   					<id>make-jar-with-dependencies</id> -->
    <!--   					<phase>package</phase> -->
    <!--   					<goals> -->
    <!--   						<goal>single</goal> -->
    <!--   					</goals> -->
    <!--   			</executions> -->
    <!--   				</execution> -->
    <!--   		</plugin> -->

</project>